# brussels_transit

./: .env.example  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  conftest.py  docker-compose.backend.yaml  docker-compose.ngrok-static.yaml  docker-compose.ngrok-temp.yaml  docker-compose.standalone.yaml  docker-compose.yaml.example  docker-entrypoint.sh  language_precedence.md  readme.md  requirements.in  requirements.txt  setup.py  setup.sh  start.py  test_bkk_realtime.py  test_bkk_vehicles.py
app/schedule_explorer/backend/: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  cache_manager.py  compare_performance.py  flixbus_vs_general.md  gtfs_loader.py  gtfs_models.py  gtfs_parquet.py  gtfs_precache.c  gtfs_precache_version.h  gtfs_precache_version.h.in  logging_config.py  main.py  memory_util.py  models.py  precache_gtfs.py  profiler.py  test_msgpack.py  test_timezone.py
app/schedule_explorer/backend/flixbus/: analyze_metrics.py  gtfs_loader.py  main.py  measure_performance.py  performance_metrics.py
app/schedule_explorer/backend/tests/: __init__.py  conftest.py  prepare_test_data.py  test_connection_handling.py  test_main.py
app/schedule_explorer/backend/tests/test_data/downloads/: datasets_metadata.json
app/schedule_explorer/backend/tests/test_data/downloads/mdb-1108_Regime_General_des_Transports_Routiers/mdb-1108-202402080056/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-1859_Societe_nationale_des_chemins_de_fer_belges_NMBS_SNCB/mdb-1859-202412190048/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  translations.txt  trips.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-1868_TEC/mdb-1868-202412190029/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-1868_TEC/mdb-1868-202412230112/: agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  trips.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-684_De_Lijn/mdb-684-202412230102/: agency.txt  calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-859_Bean_Shuttle/mdb-859-202406071503/: agency.txt  calendar.txt  fare_attributes.txt  fare_rules.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-990_Budapesti_Kozlekedesi_Kozpont_BKK/mdb-990-202412190001/: calendar_dates.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt
app/schedule_explorer/backend/tests/test_data/downloads/mdb-990_Budapesti_Kozlekedesi_Kozpont_BKK/mdb-990-202412230112/: calendar_dates.txt  feed_info.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
app/schedule_explorer/backend/tests/test_data/downloads/tld-5862_VOLANBUSZ/tld-5862-202412190055/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  (+4 more)
(+124 files in other folders)
